--- a/podcast/index.html
+++ b/podcast/index.html
@@ -3,7 +3,7 @@ layout: blog
 title: "Podcast"
 ---
 {% for post in site.categories.podcast  limit: 1 %}
-	<div class="hero">
+	<div class="hero salmon">
     <div class="container text-center">
     	<div class="row text-center">
     		<a href="{{ post.url }}">
