--- a/podcast/index.html
+++ b/podcast/index.html
@@ -7,11 +7,12 @@ title: "Podcast"
     <div class="container text-center">
     	<div class="row text-center">
     		<a href="{{ post.url }}">
-					<img src="/images/blog/{{ post.full-image }}" class="img-responsive img-first-post" alt="{{ post.title }}" />
+					<img src="/images/{{ post.full-image }}" class="img-responsive img-first-post" alt="{{ post.title }}" />
 				</a>
 			</div>
       <h1>{{ post.title }}</h1>
       <a href="{{ post.url }}" class="btn btn-border">Leer Más...</a>
+      <a href="https://itunes.apple.com/cr/podcast/vida-de-dios-en-la-empresa/id1090482711?mt=2" class="btn btn-border"><i class='fa fa-apple'></i>&nbsp;Escuchar in iTunes</a>
     </div>
     {% include social_links.html blog=true %}
   </div>
@@ -21,7 +22,7 @@ title: "Podcast"
 	{% for post in site.categories.podcast offset:1 %}
 		<div class="col-xs-12 col-md-4 col-lg-3 text-center">
 			<div class="blog-post-container {{ post.color }}">
-				<img src="/images/blog/{{ post.thumbnail }}" class="img-responsive" alt="{{ post.title }}" />
+				<img src="/images/{{ post.thumbnail }}" class="img-responsive" alt="{{ post.title }}" />
 				<div>
 				  <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
 				  <!--<span class="date">
